# Kleiderkammer

./: .env  .env.dev  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.ini
kleiderkammer/: __main__.py  app.py  config.py  database.sqlite
kleiderkammer/einstellungen/: api.py  views.py
kleiderkammer/einstellungen/templates/: einstellungen.html
kleiderkammer/einstellungen/templates/html/: benutzer-erstellen.html  benutzer-loeschen.html  einstellungen.html  kennwort-aendern.html
kleiderkammer/einstellungen/templates/js/: benutzer-erstellen.js  benutzer-loeschen.js  kennwort-aendern.js
kleiderkammer/kleidung/: api.py  views.py
kleiderkammer/kleidung/model/: kleidung.py  kleidungskategorie.py  kleidungsleihe.py  kleidungstyp.py  kleidungswaesche.py
kleiderkammer/kleidung/templates/: kleidung.html
kleiderkammer/kleidung/templates/css/: kleidung-details.css
kleiderkammer/kleidung/templates/html/: kleidung-details.html  kleidung-hinzufuegen.html  kleidung.html
kleiderkammer/kleidung/templates/js/: kleidung-details.js  kleidung-hinzufuegen.js  kleidung.js
kleiderkammer/login/: api.py  views.py
kleiderkammer/login/model/: User.py
kleiderkammer/login/templates/html/: index.html
kleiderkammer/mitglieder/: api.py  views.py
kleiderkammer/mitglieder/model/: mitglied.py
kleiderkammer/mitglieder/templates/: mitglieder.html
kleiderkammer/mitglieder/templates/html/: mitglied-details.html  mitglied-hinzufuegen.html  mitglieder.html
kleiderkammer/static/ui/: index.html
kleiderkammer/templates/: base.html  footer.html  header.html
kleiderkammer/util/: db.py
sso/realms/: feuerwehr.json
(+7 files in other folders)
