[tool.poetry]
name = "kleiderkammer"
version = "0.9.2"
description = "Kleiderkammer Inventarisierungssystem"
authors = ["Michel Blank"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.2.2"
Flask-SQLAlchemy = "2.5.1"
Flask-Login = "0.6.2"
Werkzeug = "2.2.2"
flask-session = "0.4.0"
python-dotenv = "0.21.0"
sqlalchemy = "1.4.43"
flask-minify = "0.41"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
uWSGI = "^2.0.20"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
